# CG_Labs

./: .gitmodules  readme.md
lab1/: CMakeLists.txt  Ход Работы.odt
lab1/src/: main.cpp
lab1/src/ColorModels/: cmyk.cpp  cmyk.hpp  converter.cpp  converter.hpp  hsv.cpp  hsv.hpp  rgb.cpp  rgb.hpp
lab1/src/MainWindow/: main_window.cpp  main_window.hpp
lab1/src/ValueSelectorWidget/: value_selector_widget.cpp  value_selector_widget.hpp
lab3/: main.py  Ход Работы.odt
